[package]
name = "axiom-rotating-cube"
description = "Axiom app: the browser/WASM rotating-cube demo (three deterministic shaded cubes spinning on different axes), extracted from the merged apps/axiom-gallery crate. Pure scene description on the engine umbrella's App API; composition leaf with its own wasm bundle + web page. Exposes the `rotating_cube_core` renderable core for the native capture harness (axiom-shot) and the slice contract in slice.toml."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# `cdylib` for the app's own wasm bundle (the `rotating_cube_start` /
# `rotating_cube_compare_start` / `overlay_start` entries); `rlib` so native
# tests and tooling (e.g. the axiom-shot capture harness) can compose the pure
# core.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The engine umbrella (module `engine`): App/scene/camera/render authoring + the
# live wgpu backend (wasm32). The whole demo is authored against its prelude.
axiom = { path = "../../modules/axiom" }

# Browser/live arm only: the wasm-bindgen glue, panic hook, the live windowing
# presentation loop, and the debug overlay. Confined to wasm32, so native
# `cargo test` compiles none of it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-windowing = { path = "../../modules/axiom-windowing" }
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Native integration-test only: the data-package equivalence test
# (tests/rotating_cube_scene_manifest.rs) parses the parallel TOML scene
# package. Never enters the wasm bundle.
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
