[package]
name = "axiom-sports-physics-lab"
description = "Axiom app: the Sports Physics Lab — a first-person, fully procedural 3D practice arena (procedural field, four real rigid-body sports balls, a humanoid dummy, pick-up/carry/toss interaction) extracted from the merged apps/axiom-gallery crate into its own composition leaf: one wasm bundle + web page, with the deterministic core native-tested."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# `cdylib` for the app's own wasm bundle; `rlib` so native tests and tooling
# (e.g. the axiom-shot capture harness) can compose the pure core.
[lib]
crate-type = ["cdylib", "rlib"]

# Native + wasm dependencies. Everything here builds on native (so `cargo test`
# exercises the pure lab core) and on wasm (the live browser arm). Paths are
# `../../{modules,crates}` because the app sits at the same `apps/<name>` depth
# the gallery does.
[dependencies]
# The engine umbrella (module `engine`): App/scene/camera/render authoring + the
# live wgpu backend (wasm32).
axiom = { path = "../../modules/axiom" }
# Layers used by the pure lab core (deterministic primitives, geometry, the
# frame-ambient contract, the fixed-step runtime).
axiom-kernel = { path = "../../crates/axiom-kernel" }
axiom-math = { path = "../../crates/axiom-math" }
axiom-host = { path = "../../crates/axiom-host" }
axiom-runtime = { path = "../../crates/axiom-runtime" }
# Recipe-baked procedural textures (the field markings + ball skins).
axiom-proc-texture = { path = "../../crates/axiom-proc-texture" }
axiom-recipe = { path = "../../crates/axiom-recipe" }
# The physics module: every lab object is a real rigid body through PhysicsApi.
axiom-physics = { path = "../../modules/axiom-physics" }
# The first-person walk+look controller: Pose, step integration, eye seating.
axiom-fp-controller = { path = "../../modules/axiom-fp-controller" }
# The articulated box-figure vocabulary (the humanoid dummy + player body).
axiom-figure = { path = "../../modules/axiom-figure" }

# Browser/live arm only: the wasm-bindgen glue, panic hook, the live windowing
# presentation loop, the debug overlay, and exactly the web-sys surface `web.rs`
# touches. Confined to wasm32, so native `cargo test` compiles none of it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-windowing = { path = "../../modules/axiom-windowing" }
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
