[package]
name = "axiom-stress-cubes-browser"
description = "Axiom browser/WASM app: a load/stress visual — a field of N independently-spinning cube renderables, authored on the engine's App API and presented through the live wgpu instanced drawer. The browser-visible counterpart to bench/pipeline-scaling. Depends only on the `axiom` umbrella; the wasm entry calls App::run."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The one engine crate an app imports. Everything else (scene, render, the live
# windowing/wgpu backend) comes through the umbrella + its wasm32 windowing dep.
axiom = { path = "../../modules/axiom" }

# Browser entry only: the wasm-bindgen export macro + a panic hook. Confined to
# wasm32, so native `cargo test --workspace` never compiles them.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
