[package]
name = "axiom-stress-cubes"
description = "Axiom app: the stress-cubes browser demo (a field of N independently-spinning cube renderables — a live load test you can watch), extracted from the merged apps/axiom-gallery crate into its own composition leaf. The wasm bundle exports `stress_start(cubes)` (plus the three-backend `stress_cubes_compare_start`); the native `stress_cubes_core(count)` App-core feeds axiom-shot and the slice goldens."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# `cdylib` for the app's own wasm bundle; `rlib` so native tests and tooling
# (e.g. the axiom-shot capture harness) can compose the pure core.
[lib]
crate-type = ["cdylib", "rlib"]

# Native + wasm dependency: the engine umbrella (module `engine`) —
# App/scene/camera/render authoring + the live backends behind `run`/`run_compare`.
# The path is `../../modules` because the app sits at the standard `apps/<name>` depth.
[dependencies]
axiom = { path = "../../modules/axiom" }

# Browser/live arm only: the wasm-bindgen glue, panic hook, and the debug
# overlay this app's `overlay_start` mounts. Confined to wasm32, so native
# `cargo test` compiles none of it. (The demo authors pure scene description;
# it needs no web-sys/js-sys of its own — the engine owns the canvas binding.)
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
